# webrtc-demo

./: .gitignore  README.md
answer-go/: README.md  config.toml  go.mod  go.sum
answer-go/config/: config.go
answer-go/proto/device/: Device.pb.go
answer-go/proto/warpQP/: warpQP.pb.go
answer-go/server/sgrpc/: server.go
answer-go/server/swebrtc/: server.go
offer-go/: go.mod  go.sum  main.go
proto/: Device.proto  warpQP.proto
signal-server-go/: README.md  go.mod  go.sum  main.go
signal-server-rs/: Cargo.toml  README.md  conf.toml  log4rs.yaml
signal-server-rs/src/: main.rs
signal-server-rs/src/config/: mod.rs
signal-server-rs/src/handler/: mod.rs
signal-server-rs/test/: http.http
