[package]
name = "signal-server"
version = "0.1.0"
authors = ["malefooo <784479660@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
once_cell = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4.19"
tokio-stream = "0.1.3"
log4rs = "0.13.0"
log = "0.4.8"
toml = "0.5"
